# fold_elevator

./: README.md
fold_elevator_configure/: .setup_assistant  CMakeLists.txt  package.xml
fold_elevator_configure/config/: fold_elevator.ros2_control.xacro  fold_elevator.srdf  fold_elevator_demo.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
fold_elevator_configure/launch/: fold_elevator_demo.launch.py
fold_elevator_description/: CMakeLists.txt  package.xml
fold_elevator_description/meshes/collision/: base_link.STL  link1.STL
fold_elevator_description/meshes/visual/: link2.STL  link3.STL  link4.STL
fold_elevator_description/urdf/: fold_elevator.urdf.xacro
fold_elevator_hardware_interface/: CMakeLists.txt  fold_elevator_hardware_interface.xml  package.xml
fold_elevator_hardware_interface/include/fold_elevator_hardware_interface/: Ti5Robot_cra_driver.hpp  fold_elevator_hardware_interface.hpp  socketcan_common.hpp  socketcan_driver.hpp  socketcan_id.hpp
fold_elevator_hardware_interface/src/: Ti5Robot_cra_driver.cpp  fold_elevator_hardware_interface.cpp  socketcan_common.cpp  socketcan_driver.cpp  socketcan_id.cpp
fold_elevator_msgs/: CMakeLists.txt  package.xml
fold_elevator_msgs/msg/: MotorConfig.msg  MotorStatus.msg
fold_elevator_msgs/srv/: Pid.srv
