<package format="3">
  <name>fold_elevator_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lffang@hkclr.hk">laifa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
