<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fold_elevator_hardware_interface</name>
  <version>0.1.0</version>
  <description>fold elevator hardware interface based on CAN motor for ROS2</description>
  <maintainer email="laifa@hkclr.hk">laifa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>can_msgs</depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <depend>ros2_socketcan</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_export_depend>hardware_interface</build_export_depend>
    <build_export_depend>controller_interface</build_export_depend>
    <hardware_interface plugin="${prefix}/fold_elevator_hardware_interface.xml"/>
  </export>
</package>
